--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,7 +1,7 @@
 ---
-import { Image } from "astro:assets";
-import HeroIlust from "../../assets/pics/hero-pic.png";
-import Section from "./Section.astro";
+import { Image } from 'astro:assets';
+import HeroIlust from '../../assets/pics/hero-pic.png';
+import Section from './Section.astro';
 ---
 
 <Section id="home">
@@ -9,7 +9,7 @@ import Section from "./Section.astro";
     class="grid grid-cols-1 grid-template md:grid-cols-2 md:grid-rows-1 mt-[135px]"
   >
     <div class="flex flex-col w-full lg:w-[66.5%]">
-      <h1>Navigating the digital landscape for success</h1>
+      <h1>Mejora tu empresa con la Wea Cuatica</h1>
     </div>
     <picture class="row-span-1 md:row-span-3">
       <Image src={HeroIlust} alt="Hero Ilustration" loading="eager" />
@@ -20,7 +20,11 @@ import Section from "./Section.astro";
         through a range of services including SEO, PPC, social media marketing,
         and content creation.
       </p>
-      <button class="btn-primary w-full md:w-auto">Book a consultation</button>
+      <button
+        class="btn-primary w-full md:w-auto"
+        onclick="alert('Si dale ya te mando el mail amigo')"
+        >Book a consultation</button
+      >
     </div>
   </div>
 </Section>
