--- a/src/components/sections/Proposal.astro
+++ b/src/components/sections/Proposal.astro
@@ -1,9 +1,9 @@
 ---
-import { Image } from "astro:assets";
-import Card from "../ui/Card.astro";
-import Section from "./Section.astro";
+import { Image } from 'astro:assets';
+import Card from '../ui/Card.astro';
+import Section from './Section.astro';
 
-import propImg from "../../assets/pics/proposal-pic.png";
+import propImg from '../../assets/pics/proposal-pic.png';
 ---
 
 <Section>
@@ -17,7 +17,11 @@ import propImg from "../../assets/pics/proposal-pic.png";
           Contact us today to learn more about how our digital marketing
           services can help your business grow and succeed online.
         </p>
-        <button class="btn-primary">Get your free proposal</button>
+        <button
+          class="btn-primary"
+          onclick="alert('Si dale ya te mando el mail amigo')"
+          >Get your free proposal</button
+        >
       </div>
       <picture
         class="hidden md:flex absolute right-[-10%] lg:right-0 top-[-15%] h-[450px] items-center justify-center"
