--- a/src/components/ui/Accordion.astro
+++ b/src/components/ui/Accordion.astro
@@ -1,54 +1,19 @@
 ---
-import AccordionItem from "./AccordionItem.astro";
+import AccordionItem from './AccordionItem.astro';
 
 const content = [
-  {
-    index: 1,
-    title: "First Item",
-    description:
-      "lorem ipsum dolor sit amet consectetur adipisicing elit.During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements. ",
-  },
-  {
-    index: 2,
-    title: "Second Item",
-    description:
-      "lorem ipsum dolor sit amet consectetur adipisicing elit.During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements. ",
-  },
-  {
-    index: 3,
-    title: "Third Item",
-    description:
-      "lorem ipsum dolor sit amet consectetur adipisicing elit.During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements. ",
-  },
-  {
-    index: 4,
-    title: "Fourth Item",
-    description:
-      "lorem ipsum dolor sit amet consectetur adipisicing elit.During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements. ",
-  },
-  {
-    index: 5,
-    title: "Fifth Item",
-    description:
-      "lorem ipsum dolor sit amet consectetur adipisicing elit.During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements. ",
-  },
-  {
-    index: 6,
-    title: "Sixth Item",
-    description:
-      "lorem ipsum dolor sit amet consectetur adipisicing elit.During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements. ",
-  },
+  { title: 'First Item', description: 'Toma por curioso' },
+  { title: 'Second Item', description: 'Mira que te como ehh > El dibu' },
+  { title: 'Third Item', description: 'La curiosidad mato al gato. - Julito' },
 ];
 ---
 
 {
-  content.map((item) => {
-    return (
-      <AccordionItem
-        index={item.index}
-        title={item.title}
-        description={item.description}
-      />
-    );
-  })
+  content.map((item, i) => (
+    <AccordionItem
+      index={i + 1}
+      title={item.title}
+      description={item.description}
+    />
+  ))
 }
