--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -1,23 +1,23 @@
 ---
-import { Image } from "astro:assets";
-import Facebook from "../../assets/facebook.svg";
-import Linkedin from "../../assets/linkedin.svg";
-import Logo from "../../assets/logo-alt.svg";
-import Twitter from "../../assets/twitter.svg";
-import ShortForm from "../ui/ShortForm.astro";
+import { Image } from 'astro:assets';
+import Facebook from '../../assets/facebook.svg';
+import Linkedin from '../../assets/linkedin.svg';
+import Logo from '../../assets/logo-alt.svg';
+import Twitter from '../../assets/twitter.svg';
+import ShortForm from '../ui/ShortForm.astro';
 
 const logos = [
-  { name: "Facebook", src: Facebook, link: "https://facebook.com" },
-  { name: "Linkedin", src: Linkedin, link: "https://linkedin.com" },
-  { name: "Twitter", src: Twitter, link: "https://twitter.com" },
+  { name: 'Facebook', src: Facebook, link: 'https://facebook.com' },
+  { name: 'Linkedin', src: Linkedin, link: 'https://linkedin.com' },
+  { name: 'Twitter', src: Twitter, link: 'https://twitter.com' },
 ];
 
 const links = [
-  { name: "About us", href: "#about" },
-  { name: "Services", href: "#services" },
-  { name: "Use Cases", href: "#cases" },
-  { name: "Pricing", href: "#Testimonials" },
-  { name: "Blog", href: "#Home" },
+  { name: 'Services', href: '#services' },
+  { name: 'Use cases', href: '#cases' },
+  { name: 'About us', href: '#about' },
+  { name: 'Testimonials', href: '#testimonials' },
+  { name: 'Contact', href: '#contact' },
 ];
 ---
 
@@ -32,7 +32,7 @@ const links = [
         >
           <picture>
             <a href="#home">
-              <Image src={Logo} alt="Logo for Kreatif Brand" />
+              <Image src={Logo} alt="Wea Software Logo" />
             </a>
           </picture>
           <ul class="flex flex-col sm:flex-row gap-5">
@@ -65,7 +65,7 @@ const links = [
           </ul>
         </div>
 
-        <div class="flex flex-col lg:flex-row mt-[66px] mb-[51px]">
+        <div class="flex flex-col lg:flex-row mt-[66px]">
           <div
             class="flex text-center lg:text-start flex-col w-full lg:w-[30%]"
           >
@@ -78,35 +78,10 @@ const links = [
               </span>
             </div>
           </div>
-          <div class="flex-grow my-10 lg:my-0 lg:ml-12">
+          <div class="flex-grow my-10 mb-0 lg:my-0 lg:ml-12">
             <ShortForm />
           </div>
         </div>
-      </div>
-
-      <div class="h-[1px] bg-white mb-5"></div>
-      <div
-        class="flex flex-col lg:flex-row h-20 justify-center mt-4 text-center md:justify-between md:mt-0"
-      >
-        <span
-          >2024 Positivus - Made With <a
-            class="underline"
-            target="_blank"
-            href="https://astro.build/">Astro</a
-          ></span
-        >&nbsp
-        <span>
-          <a
-            href="https://www.olgaskuja.design/"
-            target="_blank"
-            class="underline">Credit (Olga Skuja)</a
-          ><span> &</span>
-          <a
-            class="underline"
-            href="https://creativecommons.org/licenses/by/4.0/"
-            target="_blank">Licence</a
-          >
-        </span>
       </div>
     </div>
   </div>
