--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,8 +13,8 @@ import "../styles/globals.css";
 ---
 
 <MainLayout
-  title="Kreatif Software"
-  description="Kreatif ofrece servicios de diseño y desarrollo de software"
+  title="Wea Software"
+  description="Wea ofrece servicios de diseño y desarrollo de software"
 >
   <Hero />
   <Sponsors />
